# py-html-logger

./: .gitignore  LICENSE  MANIFEST.in  README.md  _deploy.ps1  _reinstall.ps1  pyproject.toml  setup.cfg
examples/: basic_usage.py
htmllogger/: __init__.py  config.py  core.py  html_template.py  template.html  utils.py  writer.py
loghtml/: __init__.py  core.py  template.html  writer.py
src/htmllogger/: writer.py
src/loghtml/: __init__.py  config.py  core.py  template.html  writer.py
tests/: __init__.py  local_test.py  test_logger.py  test_performance.py
