[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-html-logger"
version = "0.1.1"
description = "Library for generating HTML logs with support for colors, rotation and filters via JavaScript."
readme = "README.md"
authors = [
    { name = "Raphael Pires Nome", email = "rphspires@gmail.com" }
]
license = "MIT"
requires-python = ">=3.8"

keywords = ["logging", "html", "logger", "logs", "colors", "trace"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
]

[project.urls]
"Homepage" = "https://github.com/rphpires/py-html-logger"
"Bug Tracker" = "https://github.com/rphpires/py-html-logger/issues"
