[metadata]
name = py-html-logger
version = 0.1.1
author = Raphael Pires
author_email = rphspires@gmail.com
description = Biblioteca para geração de logs em HTML com suporte a cores, rotação e filtros via JavaScript.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rphpires/py-html-logger
project_urls =
    Bug Tracker = https://github.com/rphpires/py-html-logger/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: System :: Logging

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests
    examples

